fix overflow

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -299,7 +299,7 @@
   border-radius: 6px;
   background: #fff;
   position: relative;
-  overflow: hidden;
+
 
   .user-info {
     width: 650px;
